--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 # OS generated files
 .DS_Store
@@ -58,3 +59,7 @@ db.sqlite3
 library_top/db1.sqlite3
 db11.sqlite3
 db1.sqlite3
+
+/env
+
+
