--- a/library_top/requirements.txt
+++ b/library_top/requirements.txt
@@ -1,33 +1,73 @@
 asgiref==3.7.2
+attrs==23.1.0
+build==0.10.0
+CacheControl==0.12.14
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+cleo==2.0.1
+colorama==0.4.6
+crashtest==0.4.1
 cryptography==41.0.1
 defusedxml==0.7.1
-django-environ==0.10.0
+distlib==0.3.7
 Django==4.2.1
 django-cors-headers==4.0.0
+django-environ==0.10.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 djoser==2.2.0
+dulwich==0.21.5
+filelock==3.12.2
 gunicorn==20.1.0
+html5lib==1.1
 idna==3.4
-psycopg2==2.9.6
-pycparser==2.21
+importlib-metadata==6.8.0
+installer==0.7.0
+jaraco.classes==3.3.0
+jsonschema==4.18.3
+jsonschema-specifications==2023.6.1
+keyring==23.13.1
+lockfile==0.12.2
+more-itertools==9.1.0
+msgpack==1.0.5
 oauthlib==3.2.2
+packaging==23.1
+pexpect==4.8.0
 Pillow==9.5.0
+pkginfo==1.9.6
+platformdirs==3.9.1
+poetry==1.5.1
+poetry-core==1.6.1
+poetry-plugin-export==1.4.0
+psycopg2==2.9.6
+ptyprocess==0.7.0
+pycparser==2.21
 PyJWT==2.7.0
-python3-openid==3.2.0
+pyproject_hooks==1.0.0
 python-dotenv==1.0.0
+python3-openid==3.2.0
 pytz==2023.3
+pywin32-ctypes==0.2.2
+rapidfuzz==2.15.1
+referencing==0.29.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+rpds-py==0.8.11
+shellingham==1.5.0.post1
+six==1.16.0
 social-auth-app-django==5.2.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
-urllib3==2.0.2
+tomlkit==0.11.8
+trove-classifiers==2023.7.6
 tzdata==2023.3
+urllib3==1.26.16
+virtualenv==20.24.0
+webencodings==0.5.1
+zipp==3.16.2
 
 
 
